WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49731
Web Inspector: [REGRESSION] Crash on opening WebInspector for a page with CSS containing @media with nested rules
https://bugs.webkit.org/show_bug.cgi?id=49731
Summary
Web Inspector: [REGRESSION] Crash on opening WebInspector for a page with CSS...
Alexander Pavlov (apavlov)
Reported
2010-11-18 07:10:52 PST
1. Go to
http://www.opera.com/
2. Open Web Inspector Upstreaming
http://code.google.com/p/chromium/issues/detail?id=63575
Attachments
[PATCH] Suggested fix
(7.37 KB, patch)
2010-11-19 04:42 PST
,
Alexander Pavlov (apavlov)
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2010-11-19 04:42:27 PST
Created
attachment 74368
[details]
[PATCH] Suggested fix This patch temporarily disables building of styles for nested rules. A corresponding regression bug will be filed once the crasher is gone.
Pavel Feldman
Comment 2
2010-11-19 04:44:26 PST
Comment on
attachment 74368
[details]
[PATCH] Suggested fix View in context:
https://bugs.webkit.org/attachment.cgi?id=74368&action=review
> WebCore/inspector/InspectorStyleSheet.cpp:682 > + RefPtr<InspectorObject> bogusStyle = InspectorObject::create();
Please add FIXME here.
Alexander Pavlov (apavlov)
Comment 3
2010-11-19 06:56:56 PST
Committed with comment addressed: <
http://trac.webkit.org/changeset/72386
>
Pavel Feldman
Comment 4
2010-11-21 07:33:52 PST
***
Bug 49862
has been marked as a duplicate of this bug. ***
Alexander Pavlov (apavlov)
Comment 5
2010-11-24 14:27:51 PST
***
Bug 49738
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug