2010-11-19  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] Crash on opening WebInspector for a page with CSS containing @media with nested rules
        https://bugs.webkit.org/show_bug.cgi?id=49731

        Temporarily disable building of styles for nested rules.

        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyleSheet::buildObjectForRule):
        (WebCore::InspectorStyleSheet::buildObjectForStyle):
        (WebCore::InspectorStyleSheet::ensureParsedDataReady):
        (WebCore::InspectorStyleSheet::ensureSourceData):
        * inspector/InspectorStyleSheet.h:
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane.prototype._rebuildUpdate):
        (WebInspector.StylesSidebarPane.prototype._refreshStyleRules):
        (WebInspector.StylesSidebarPane.prototype._rebuildStyleRules):


Canonical link: https://commits.webkit.org/62848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72386 268f45cc-cd09-0410-ab3c-d52691b4dbfc